[gd_scene load_steps=4 format=3 uid="uid://q305865hu0x2"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_detyu"]
[ext_resource type="Texture2D" uid="uid://cmyn25uf28frv" path="res://kenney_space-shooter-redux/PNG/playerShip1_red.png" id="1_qs41i"]
[ext_resource type="AudioStream" uid="uid://5clir0ljg8om" path="res://kenney_space-shooter-redux/Bonus/sfx_laser1.ogg" id="3_04phq"]

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_detyu")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(3, -3)
texture = ExtResource("1_qs41i")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-4, -42, 11, -42, 16, -15, 39, -1, 50, -10, 49, 20, 16, 26, 11, 34, -4, 35, -11, 25, -40, 19, -44, -9, -34, -2, -9, -15)

[node name="LaserStartPos" type="Marker2D" parent="."]
position = Vector2(0, -83)
gizmo_extents = 116.4

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_04phq")

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
